[gd_scene load_steps=27 format=2]

[ext_resource path="res://guild_hall/guild_interface/guild_interface.gd" type="Script" id=1]
[ext_resource path="res://guild_hall/guild_interface/deposit/button_normal.png" type="Texture" id=2]
[ext_resource path="res://guild_hall/guild_interface/sell/button_normal.png" type="Texture" id=3]
[ext_resource path="res://guild_hall/guild_interface/sell/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://UI/pause_menu/header_decor.png" type="Texture" id=5]
[ext_resource path="res://guild_hall/guild_interface/sell/item_price_margin.tscn" type="PackedScene" id=6]
[ext_resource path="res://guild_hall/guild_interface/deposit/level_bar_under.png" type="Texture" id=7]
[ext_resource path="res://guild_hall/guild_interface/sell/sell_scroll_theme.tres" type="Theme" id=8]
[ext_resource path="res://UI/pause_menu/coin_decor.png" type="Texture" id=9]
[ext_resource path="res://UI/Font Resources/Wendy-10.tres" type="DynamicFont" id=10]
[ext_resource path="res://UI/Font Resources/wendy-10_pause_menu_header.tres" type="DynamicFont" id=11]
[ext_resource path="res://guild_hall/guild_interface/market/button_normal.png" type="Texture" id=12]
[ext_resource path="res://guild_hall/guild_interface/market/button_pressed.png" type="Texture" id=13]
[ext_resource path="res://UI/Fonts/wendy.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://guild_hall/guild_interface/deposit/increase_amount_button_normal.png" type="Texture" id=15]
[ext_resource path="res://UI/Fonts/Mini3x4.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://guild_hall/guild_interface/deposit/increase_amount_button_pressed.png" type="Texture" id=17]
[ext_resource path="res://guild_hall/guild_interface/deposit/decrease_amount_button_pressed.png" type="Texture" id=18]
[ext_resource path="res://guild_hall/guild_interface/deposit/decrease_amount_button_normal.png" type="Texture" id=19]
[ext_resource path="res://guild_hall/guild_interface/deposit/deposit_button_decor.png" type="Texture" id=20]
[ext_resource path="res://guild_hall/guild_interface/deposit/level_bar_progress.png" type="Texture" id=21]
[ext_resource path="res://guild_hall/guild_interface/deposit/level_bar_over.png" type="Texture" id=22]
[ext_resource path="res://guild_hall/guild_interface/market/background.png" type="Texture" id=23]
[ext_resource path="res://guild_hall/guild_interface/deposit/button_pressed.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]
size = 4
extra_spacing_top = -1
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=2]
size = 10
extra_spacing_top = -5
extra_spacing_bottom = -5
font_data = ExtResource( 14 )

[node name="GuildInterface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Margin"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 23 )
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_right = 64.0
margin_bottom = 64.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="Margin/VBoxContainer"]
margin_right = 64.0
margin_bottom = 8.0
custom_constants/separation = 2

[node name="Buttons" type="HBoxContainer" parent="Margin/VBoxContainer/Top"]
margin_right = 23.0
margin_bottom = 8.0
custom_constants/separation = 1

[node name="Deposit" type="TextureButton" parent="Margin/VBoxContainer/Top/Buttons"]
margin_right = 7.0
margin_bottom = 8.0
mouse_filter = 1
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 24 )

[node name="Sell" type="TextureButton" parent="Margin/VBoxContainer/Top/Buttons"]
margin_left = 8.0
margin_right = 15.0
margin_bottom = 8.0
mouse_filter = 1
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Market" type="TextureButton" parent="Margin/VBoxContainer/Top/Buttons"]
margin_left = 16.0
margin_right = 23.0
margin_bottom = 8.0
mouse_filter = 1
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="HeaderMargin" type="MarginContainer" parent="Margin/VBoxContainer/Top"]
margin_left = 25.0
margin_right = 63.0
margin_bottom = 8.0
mouse_filter = 1

[node name="HeaderDecor" type="TextureRect" parent="Margin/VBoxContainer/Top/HeaderMargin"]
margin_right = 38.0
margin_bottom = 8.0
texture = ExtResource( 5 )

[node name="Header" type="Label" parent="Margin/VBoxContainer/Top/HeaderMargin"]
margin_right = 38.0
margin_bottom = 7.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
text = "Header"
align = 1

[node name="SecondRow" type="HBoxContainer" parent="Margin/VBoxContainer"]
margin_top = 9.0
margin_right = 64.0
margin_bottom = 15.0
custom_constants/separation = 0
alignment = 2

[node name="CoinsMargin" type="MarginContainer" parent="Margin/VBoxContainer/SecondRow"]
margin_left = 24.0
margin_right = 64.0
margin_bottom = 6.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 0
custom_constants/margin_top = 0

[node name="CoinsDecor" type="TextureRect" parent="Margin/VBoxContainer/SecondRow/CoinsMargin"]
margin_right = 40.0
margin_bottom = 6.0
texture = ExtResource( 9 )

[node name="CoinAmount" type="Label" parent="Margin/VBoxContainer/SecondRow/CoinsMargin"]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.882353, 0.776471, 0.262745, 1 )
text = "1000:COIN"
align = 2

[node name="DepositMargin" type="MarginContainer" parent="Margin/VBoxContainer"]
visible = false
margin_top = 16.0
margin_right = 64.0
margin_bottom = 59.0
custom_constants/margin_top = 5

[node name="DepositVBox" type="VBoxContainer" parent="Margin/VBoxContainer/DepositMargin"]
margin_left = 2.0
margin_top = 5.0
margin_right = 62.0
margin_bottom = 43.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="DepositHBox" type="HBoxContainer" parent="Margin/VBoxContainer/DepositMargin/DepositVBox"]
margin_left = 8.0
margin_right = 52.0
margin_bottom = 10.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 1

[node name="DecreaseAmount" type="TextureButton" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox"]
margin_top = 1.0
margin_right = 6.0
margin_bottom = 9.0
size_flags_vertical = 4
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )

[node name="DepositButtonMargin" type="MarginContainer" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox"]
margin_left = 7.0
margin_right = 37.0
margin_bottom = 10.0
custom_constants/margin_top = 1

[node name="DepositButtonVBox" type="VBoxContainer" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox/DepositButtonMargin"]
margin_top = 1.0
margin_right = 30.0
margin_bottom = 10.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 1

[node name="Deposit" type="Button" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox/DepositButtonMargin/DepositButtonVBox"]
margin_right = 30.0
margin_bottom = 5.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.882353, 0.776471, 0.262745, 1 )
custom_colors/font_color_hover = Color( 0.788235, 0.498039, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.4, 0.117647, 0.145098, 1 )
enabled_focus_mode = 0
text = "1"
flat = true

[node name="TextureRect" type="TextureRect" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox/DepositButtonMargin/DepositButtonVBox"]
margin_top = 6.0
margin_right = 30.0
margin_bottom = 9.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 20 )

[node name="IncreaseAmount" type="TextureButton" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox"]
margin_left = 38.0
margin_top = 1.0
margin_right = 44.0
margin_bottom = 9.0
size_flags_vertical = 4
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )

[node name="DepositProgressVBox" type="VBoxContainer" parent="Margin/VBoxContainer/DepositMargin/DepositVBox"]
margin_top = 14.0
margin_right = 60.0
margin_bottom = 38.0
custom_constants/separation = -2

[node name="NextLevel" type="Label" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositProgressVBox"]
margin_right = 60.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 10 )
text = "To level 2:"
align = 1

[node name="ProgressText" type="Label" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositProgressVBox"]
margin_top = 7.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 10 )
text = "0/250"
align = 1

[node name="WholeProgressBarMargin" type="MarginContainer" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositProgressVBox"]
margin_top = 14.0
margin_right = 60.0
margin_bottom = 24.0

[node name="ProgressBarMargin" type="MarginContainer" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositProgressVBox/WholeProgressBarMargin"]
margin_right = 60.0
margin_bottom = 10.0
custom_constants/margin_top = 3
custom_constants/margin_left = 1

[node name="Progress" type="TextureProgress" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositProgressVBox/WholeProgressBarMargin/ProgressBarMargin"]
margin_left = 1.0
margin_top = 3.0
margin_right = 60.0
margin_bottom = 10.0
max_value = 200.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 21 )

[node name="ProgressBarOver" type="TextureRect" parent="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositProgressVBox/WholeProgressBarMargin"]
margin_right = 60.0
margin_bottom = 10.0
texture = ExtResource( 22 )

[node name="InventoryMargin" type="MarginContainer" parent="Margin/VBoxContainer"]
visible = false
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 1
custom_constants/margin_left = 4
custom_constants/margin_bottom = 8

[node name="InventoryScrollContainer" type="ScrollContainer" parent="Margin/VBoxContainer/InventoryMargin"]
margin_left = 4.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
scroll_horizontal_enabled = false

[node name="InventoryItems" type="GridContainer" parent="Margin/VBoxContainer/InventoryMargin/InventoryScrollContainer"]
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 4

[node name="MarketMargin" type="MarginContainer" parent="Margin/VBoxContainer"]
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 1
custom_constants/margin_left = 4
custom_constants/margin_bottom = 8

[node name="MarketItems" type="GridContainer" parent="Margin/VBoxContainer/MarketMargin"]
margin_left = 4.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 40.0
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 4

[node name="ItemPriceMargin" parent="." instance=ExtResource( 6 )]
visible = false

[node name="MarketItemPriceMargin" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox/DecreaseAmount" to="." method="_on_DecreaseAmount_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox/DepositButtonMargin/DepositButtonVBox/Deposit" to="." method="_on_Deposit_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/DepositMargin/DepositVBox/DepositHBox/IncreaseAmount" to="." method="_on_IncreaseAmount_pressed"]
